# smith

./: README.md  index.html  index.js  jsconfig.json  package-lock.json  smith.css  smith.js  styles.css
examples/: demo.smith  option1.smith  option2.smith
pitch-deck/: index.html  package.json
tree-sitter-smith/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
tree-sitter-smith/bindings/c/: tree-sitter-smith.h  tree-sitter-smith.pc.in
tree-sitter-smith/bindings/go/: binding.go  binding_test.go  go.mod
tree-sitter-smith/bindings/node/: binding.cc
tree-sitter-smith/bindings/python/tree_sitter_smith/: __init__.py  binding.c
tree-sitter-smith/bindings/rust/: build.rs  lib.rs
tree-sitter-smith/src/: grammar.json  node-types.json  parser.c
tree-sitter-smith/test/corpus/: functions.txt  literals.txt
